# osu-cse-5526

./: .gitignore  README.md  pyproject.toml
docs/: lab2.md  sub.md
lab1/: main.py  report.md  result.md  result2.md
lab1/activation_funcs/: const.py  sigmoid.py  sigmoid_w_alpha.py
lab1/cost/: __init__.py  mse.py
lab1/np_mod/activation_funcs/: const.py  sigmoid.py  sigmoid_w_alpha.py
lab1/np_mod/cost/: const.py  mse.py
lab1/np_mod/dataset/: is_odd.py
lab1/np_mod/perceptron_helper/: two_layers.py
lab1/perceptron_helper/: mod.py  two_layers.py
lab1/torch_mod/: __init__.py
lab1/torch_mod/activation_funcs/: const.py  sigmoid.py  sigmoid_w_alpha.py
lab1/torch_mod/cost/: const.py  mse.py
lab1/torch_mod/dataset/: is_odd.py
lab1/torch_mod/perceptron_helper/: two_layers.py
lab2/: hist_logs.md  main.py  report.md
lab2/np_mod/: __init__.py  gen_data.py
lab2/np_mod/alg/: centroids_const.py  kmeans.py
lab2/np_mod/cost/: const.py  mse.py
lab2/np_mod/perceptron_helper/: rbf_2_layers.py
lab3/: hist_logs.md  plot_graph.py  report.md
scripts/: lab1-example.sh  lab2-example.sh  lab3-1-choose-c.sh  lab3-2-half-sampling.sh  test-openmp.sh
test_openmp/: main.cpp
