[tool.poetry]
name = "osu-cse-5526"
version = "0.1.0"
description = ""
authors = ["WangWilly <s89667654@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.1"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
